./gradlew :grails-bom:syncProps

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ preventSnapshotPublish=false
 # https://github.com/grails/grails-gradle-plugin/issues/222
 slf4jPreventExclusion=true
 
-# Generated on Thu Jan 16 10:23:54 EST 2025 by: ./gradlew :grails-bom:syncProps
+# Generated on Sun Feb 02 19:37:49 PST 2025 by: ./gradlew :grails-bom:syncProps
 # Only version value modifications allowed after this point. Do not insert or change version names. 
 ant.version=1.10.15
 asciidoctorj.version=3.0.0
@@ -44,7 +44,6 @@ commons-text.version=1.12.0
 directory-watcher.version=0.18.0
 flying-saucer-pdf-openpdf.version=9.4.0
 geb-spock.version=7.0
-graal-sdk.version=24.1.1
 grails-datastore.version=9.0.0-SNAPSHOT
 grails-datastore-gorm-hibernate5.version=9.0.0-SNAPSHOT
 grails-datastore-gorm-mongodb.version=9.0.0-SNAPSHOT
