--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ preventSnapshotPublish=false
 # https://github.com/grails/grails-gradle-plugin/issues/222
 slf4jPreventExclusion=true
 
-# Generated on Sun Feb 02 19:37:49 PST 2025 by: ./gradlew :grails-bom:syncProps
+# Generated on Mon Feb 03 21:04:24 EST 2025 by: ./gradlew :grails-bom:syncProps
 # Only version value modifications allowed after this point. Do not insert or change version names. 
 ant.version=1.10.15
 asciidoctorj.version=3.0.0
@@ -73,16 +73,7 @@ plugins-views-gradle.version=4.0.0-SNAPSHOT
 plugins-views-json.version=4.0.0-SNAPSHOT
 plugins-views-json-templates.version=9.0.0-SNAPSHOT
 plugins-views-markup.version=4.0.0-SNAPSHOT
-profiles-angular.version=10.0.1
-profiles-base.version=7.0.1
-profiles-plugin.version=7.0.1
-profiles-profile.version=7.0.1
-profiles-react.version=7.0.1
-profiles-rest-api.version=7.0.1
-profiles-rest-api-plugin.version=7.0.1
-profiles-vue.version=7.0.1
-profiles-web.version=7.0.1
-profiles-web-plugin.version=7.0.1
+profiles.version=10.0.2-SNAPSHOT
 rxjava.version=1.3.8
 rxjava2.version=2.2.21
 rxjava3.version=3.1.10
