--- a/grails-bom/build.gradle
+++ b/grails-bom/build.gradle
@@ -11,9 +11,6 @@ javaPlatform {
 def plugins = new Properties()
 plugins.load(new StringReader(new File("$projectDir/plugins.properties").text))
 
-def profiles = new Properties()
-profiles.load(new StringReader(new File("$projectDir/profiles.properties").text))
-
 def versions = new Properties()
 versions.load(new StringReader(new File("$projectDir.parentFile/gradle.properties").text))
 
@@ -51,6 +48,7 @@ ext {
         org.grails:grails-gradle-plugin::
         org.grails:grails:gsp,web-gsp,web-taglib,web-testing-support::gsp
         org.grails:views-json-testing-support::
+        org.grails.profiles:base,plugin,profile,web,rest-api,web-plugin,rest-api-plugin,react,vue,angular:::profiles
         org.jsoup:jsoup::
         org.mongodb:bson:,record-codec::mongodb
         org.mongodb:mongodb-driver:core,sync::mongodb
@@ -83,14 +81,13 @@ ext {
         }
     }
 
-    pluginsAndProfiles =
-        plugins.collect { [groupId: "org.grails.plugins", artifactId:it.key, versionValue: it.value, name: "plugins-${it.key}"] } +
-        profiles.collect { [groupId: "org.grails.profiles", artifactId:it.key, versionValue: it.value, name: "profiles-${it.key}"] }
+    pluginList =
+        plugins.collect { [groupId: "org.grails.plugins", artifactId:it.key, versionValue: it.value, name: "plugins-${it.key}"] }
 
-    dependenciesVersions = (dependencyList + pluginsAndProfiles).sort { it.name }
+    dependenciesVersions = (dependencyList + pluginList).sort { it.name }
             .groupBy { it.name }.collect { it.value.first() } // remove duplicates
 
-    allDependencies = (pluginsAndProfiles + dependencyList).sort { it.name + it.artifactId }
+    allDependencies = (pluginList + dependencyList).sort { it.name + it.artifactId }
     allDependencies.each { it << [version: "${it.name}.version"] }
 }
 
