--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ preventSnapshotPublish=false
 # https://github.com/grails/grails-gradle-plugin/issues/222
 slf4jPreventExclusion=true
 
-# Generated on Mon Feb 03 21:04:24 EST 2025 by: ./gradlew :grails-bom:syncProps
+# Generated on Wed Feb 05 18:23:13 EST 2025 by: ./gradlew :grails-bom:syncProps
 # Only version value modifications allowed after this point. Do not insert or change version names. 
 ant.version=1.10.15
 asciidoctorj.version=3.0.0
@@ -59,6 +59,7 @@ jline.version=2.14.6
 jna.version=5.16.0
 jquery.version=3.7.1
 jsoup.version=1.18.3
+liquibase.version=4.27.0
 mongodb.version=5.3.1
 objenesis.version=3.4
 plugins-cache.version=8.0.0-SNAPSHOT
