--- a/grails-shell/build.gradle
+++ b/grails-shell/build.gradle
@@ -4,10 +4,6 @@ mainClassName = "org.grails.cli.GrailsCli"
 
 repositories {
     mavenCentral()
-    maven {
-        url = 'https://repo.gradle.org/gradle/libs-releases'
-        description = 'Needed for Gradle Tooling API'
-    }
 }
 
 dependencies {
@@ -32,7 +28,7 @@ dependencies {
     api "org.fusesource.jansi:jansi"
     api "jline:jline"
 
-    compileOnly "org.gradle:gradle-tooling-api:$gradleToolingApiVersion"
+    api "org.gradle:gradle-tooling-api:$gradleToolingApiVersion"
     compileOnly "org.springframework.boot:spring-boot"
     compileOnly "org.springframework.boot:spring-boot-loader-tools"
     compileOnly "org.springframework:spring-web"
